stretch fixed navbar + nav hover

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -76,12 +76,20 @@ hr {
 nav {
 	display: inline-block;
 	padding: 20px;
+	position: fixed;
+	top: 0px;
+	background-color: azure;
 }
 
 nav a {
 	padding: 24px;
 	color: gray;
 }
+
+nav a:hover {
+	color: blue;
+}
+
 
 .logo {
 	margin-left: 40px;
@@ -92,7 +100,7 @@ nav a {
 .hero {
 	width: 100%;
 	height: 460px;
-	margin-top: 50px;
+	margin-top: 100px;
 }
 
 .hero-left {
